[build-system]
requires = [
    'setuptools>=61.0',
    'wheel',
    'setuptools_scm>=6.0',
    'tomli',
]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
]

name = "elucidate"
version = "v0.0.1-alpha-2"
authors = [
  { name="Bikatr7", email="Bikatr7@proton.me" },
]
description = "Smarter Translations through LLM Self-Evaluation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/Kakusui/Elucidate"
Issues = "https://github.com/Kakusui/Elucidate/issues"
